My Third commit

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 		<script src="js/lib/angular.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/lib/angular-animate.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/lib/angular-route.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="js/MatchesSummary.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/NewsSummary.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/LiveSummary.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/services.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/controllers.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/app.js" type="text/javascript" charset="utf-8"></script> 
-	</head>
+	</head>	
 
 	<body ng-app="cricketaddict">
 		
@@ -25,7 +31,7 @@
 		<div class="screen-width app-header">
 			<a href="#/"><img class="app-logo" src="img/app-logo.jpg"></a>
 			<a href="#/"><img class="app-title" src="img/app-title.jpg"></a>
-		</div>
+		</div>;
 		
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
